--- a/index.html
+++ b/index.html
@@ -4,15 +4,60 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/fonts.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/main.css">
   <title>CronJ-Fullstack</title>
 </head>
 <body>
   <div class="container">
     <header class="hero">
       <div class="navbar" id="mynav">
-        
+        <img src="./img/Group 10248.png" alt="img-logo" class="img-logo">
+        <nav>
+          <ul>
+            <li><a href="#">Hire Developers</a></li>
+            <li> <a href="#">Services</a> </li>
+            <li> <a href="#">Solutions</a> </li>
+            <li> <a href="#">Portfolio</a> </li>
+            <li> <a href="#">About</a> </li>
+          </ul>
+        </nav>
+        <div class="btn-primary">Contact Us</div>
       </div>
+      <div class="header-content">
+        <h1 class="main-text">Looking for a one-stop solution for your full stack web development needs?</h1>
+        <p class="p-below-main-text">With CronJ’s technical expertise make your dream application at just $8 per hour</p>
+        <div class="btn-developers-profile">
+          <img src="./img/user (3).png" alt="img-user3" class="img-user3">
+          <p class="p-request-developers-profile">Request Developers’ profile!</p>
+        </div>
+        <div class="header-content-reviews">
+          <div class="review-box">
+            <img src="./img/clutch-logo.png" alt="img-clutch" class="img-clutch">
+            <img src="./img/Group 13079.png" alt="" class="img-clutch-review">
+          </div>
+          <div class="review-box">
+            <img src="./img/good-firms-logo.png" alt="img-goodfirms" class="img-goodfirms">
+            <img src="./img/Group 13081.png" alt="" class="img-goodfirms-review">
+          </div>
+          <div class="review-box">
+            <img src="./img/Glassdoor-Logo-2007-2017.png" alt="img-glassdoor" class="img-glassdoor">
+            <img src="./img/Group 13080.png" alt="" class="img-glassdoor-review">
+          </div>
+        </div>
+    </div>
     </header>
+    <main>
+      <section class="sec-group-12585">
+        <p class="p-sec-12585">CronJ has been serving top companies, start-ups, and some of the fastest-growing SMEs for over a decade</p>
+        <img src="./img/Group 11283.png" alt="img-11283" class="img-11283">
+      </section>
+      <section class="sec-group-14570">
+        
+      </section>
+    </main>
   </div>
 </body>
 </html>
