project completed, responsiveness remaining

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="./css/header.css">
   <link rel="stylesheet" href="./css/fonts.css">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/widescreen.css">
   <title>CronJ-Fullstack</title>
 </head>
 <body>
@@ -644,9 +646,166 @@
         </div>
       </section>
       <section class="sec-rec-1699">
-        
+        <div class="div-rec-1699-left">
+          <h1 class="h1-contents">CONTENTS</h1>
+          <h1 class="h1-content-list">When should you choose full stack developers?</h1>
+          <h1 class="h1-content-list">When to hire full stack developers?</h1>
+          <h1 class="h1-content-list">What are the skills that a full stack coder should possess?</h1>
+          <h1 class="h1-content-list">Frontend Skills</h1>
+          <p class="p-content-list">Angular</p>
+          <p class="p-content-list">React</p>
+          <p class="p-content-list">Vue</p>
+          <h1 class="h1-content-list">Backend Skills</h1>
+          <p class="p-content-list">Java</p>
+          <p class="p-content-list">Python</p>
+          <p class="p-content-list">Node</p>
+          <h1 class="h1-content-list">Databases</h1>
+          <h1 class="h1-content-list">Cloud Hosting</h1>
+          <h1 class="h1-content-list">Basic Design Skills</h1>
+          <h1 class="h1-content-list">Soft Skills</h1>
+          <h1 class="h1-content-list">What are the factors responsible for the cost of hiring dedicated developers?</h1>
+          <h1 class="h1-content-list">Scope of the project</h1>
+          <h1 class="h1-content-list">The complexity of the Application</h1>
+          <h1 class="h1-content-list">Hiring Model</h1>
+          <h1 class="h1-content-list">Third-Party Integrations</h1>
+          <h1 class="h1-content-list">Third-Party Integrations</h1>
+          <h1 class="h1-content-list">Interview Questions to hire full stack developers</h1>
+          <h1 class="h1-content-list">Explaining the difference between ES6 class and ES5 function constructors</h1>
+          <h1 class="h1-content-list">Explaining the function of clearing floats in CSS</h1>
+          <h1 class="h1-content-list">Checking their knowledge of tools</h1>
+          <h1 class="h1-content-list">What are the latest trends in web development?</h1>
+          <h1 class="h1-content-list">Check their expertise in reducing the load time of web applications</h1>
+          <h1 class="h1-content-list">How do you deal when you find a colleague’s code to be inefficient?</h1>
+          <h1 class="h1-content-list">Talking about the most challenging project</h1>
+          <h1 class="h1-content-list">Asking if they would be interested in a management position?</h1>
+          <h1 class="h1-content-list">Talking about their current project</h1>
+          <h1 class="h1-content-list">How to optimize a website and become as scalable as possible?</h1>
+        </div>
+        <div class="div-rec-1699-right">
+          <h1 class="h1-right-content">When should you choose full stack developers?</h1>
+          <p class="p-right-content">When we consider an application, there are three aspects to them namely, frontend, backend and DevOps. However, not all web applications require all three layers. Some projects do not need a frontend because they only provide APIs. Some do not require a backend because they are single-page applications. Let us browse the scenarios where you would need to hire full stack developer and scenarios that ask of a specialist.</p>
+          <h1 class="h1-right-content">When to hire full stack developers?</h1>
+          <p class="p-right-content"><span><img src="./img/Ellipse 401.png" alt="" class="img-ellipse"></span>Its better to hire full stack developer when you are starting from scratch. A full stack developer will create all the components from scratch and give shape to software architecture. Once the foundation has been laid, the owner can bring in specialists for certain domains. Irrespective of any situation, you should have a full stack developer coordinating and leading a project.</p>
+          <p class="p-right-content"><span><img src="./img/Ellipse 401.png" alt="" class="img-ellipse"></span>Hire full stack developers when you have a development team in place that needs a technical lead. Irrespective of their depth of knowledge you will need someone to bring out the best of the team members. A full stack developer makes sure that people are doing their work and time is not being wasted.</p>
+          <p class="p-right-content"><span><img src="./img/Ellipse 401.png" alt="" class="img-ellipse"></span>When you are constrained by your budget it is suggested that you hire full stack engineer. It is true that the development process will not be as fast but it will be steady. That being said, you will also save money in communication overheads because you will be working with fewer developers.</p>
+          <h1 class="h1-right-content">What are the skills that a full stack coder should possess?</h1>
+          <p class="p-right-content">In order to be a python full stack developer or java full stack developer, there should be a perfect harmony of soft skills and technical skills. Only when one has the appropriate balance, will they be able to create a work environment that does not seem laborious. One can divide the technical skills into five sections.</p>
+          <h1 class="h1-right-content">Frontend Skills</h1>
+          <h1 class="h1-right-content">Angular</h1>
+          <p class="p-right-content">Angular has been known to have the shortest learning curve. Moreover, its component libraries have a bunch of standardized components that enable you to get routine tasks done easily.</p>
+          <h1 class="h1-right-content">React</h1>
+          <p class="p-right-content">The knowledge of React enables a developer to create highly interactive user interfaces. It can be used to create standalone UI components with visuals and logic</p>
+          <h1 class="h1-right-content">Vue</h1>
+          <p class="p-right-content">The knowledge of Vue enables developers to make web interfaces and single-page applications. Besides that, it is also used for website and mobile application development.</p>
+          <h1 class="h1-right-content">Backend Skills</h1>
+          <h1 class="h1-right-content">Java</h1>
+          <p class="p-right-content">Java makes network integration easier which enables distributed computing.Java is used to build web servers and e-commerce applications.</p>
+          <h1 class="h1-right-content">Python</h1>
+          <p class="p-right-content">Python is known to help developers to complete code in fewer steps. People opt to hire full stack developers that use Python to make advanced video games and web applications.</p>
+          <h1 class="h1-right-content">Node</h1>
+          <p class="p-right-content">The use of Node is effective in the backend of development. Node js can handle large amounts of data in real-time. Applications developed in Node have high scalability and performance.</p>
+        </div>
+      </section>
+      <section class="sec-rec1699">
+
+      </section>
+      <section class="sec-rec-14575">
+        <h1 class="h1-14575">Want to scale up your business with minimum fuss?</h1>
+        <p class="p-14575">Collaborate with CronJ for your own application at budget-friendly options.</p>
+        <div class="div-btn-14575">
+          <img src="./img/_x31_3_x2C__App_x2C__coding_x2C__development_x2C__mobile_x2C__code.png" alt="" class="img-14575">
+          <h1 class="h1-14575-image">Hire dedicated full stack developers!</h1>
+        </div>
+      </section>
+      <section class="sec-rec-1609">
+        <h1 class="h1-1609">What has been making the rounds?</h1>
+        <div class="div-1609-grid">
+          <div class="div-1609-grid-card">
+            <h1 class="h1-1609-grid-card">Hire Software Developers from Top Software Development Companies for Startups in Texas</h1>
+            <p class="p-1609-grid-card">CronJ is one such established company that helps to deliver projects efficiently within a stipulated......</p>
+            <div class="div-check-out-1609">
+              <h1 class="h1-check-out">Check Out</h1>
+              <img src="./img/Icon feather-arrow-right.png" alt="img-arrow" class="img-arrow">
+            </div>
+            <div class="div-by-cronj">
+              <img src="./img/Icon material-account-circle.png" alt="img-icon-material" class="img-icon-material">
+              <h6 class="h6-by-cronj">By CronJ</h6>
+            </div>
+          </div>
+          <div class="div-1609-grid-card">
+            <h1 class="h1-1609-grid-card">Hire Software Developers from Top Software Development Companies For Startups in California</h1>
+            <p class="p-1609-grid-card">CronJ is one such established company that helps to deliver projects efficiently within a stipulated....</p>
+            <div class="div-check-out-1609">
+              <h1 class="h1-check-out">Check Out</h1>
+              <img src="./img/Icon feather-arrow-right.png" alt="img-arrow" class="img-arrow">
+            </div>
+            <div class="div-by-cronj">
+              <img src="./img/Icon material-account-circle.png" alt="img-icon-material" class="img-icon-material">
+              <h6 class="h6-by-cronj">By CronJ</h6>
+            </div>
+          </div>
+          <div class="div-1609-grid-card">
+            <h1 class="h1-1609-grid-card">How Video Interviewing Software is Revolutionizing the Recruitment Process?</h1>
+            <p class="p-1609-grid-card">Today’s unique talent resource-demanding world has forced the process of recruitment to move beyond its traditional boundaries.</p>
+            <div class="div-check-out-1609">
+              <h1 class="h1-check-out">Check Out</h1>
+              <img src="./img/Icon feather-arrow-right.png" alt="img-arrow" class="img-arrow">
+            </div>
+            <div class="div-by-cronj">
+              <img src="./img/Icon material-account-circle.png" alt="img-icon-material" class="img-icon-material">
+              <h6 class="h6-by-cronj">By CronJ</h6>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="sec-rec-1489">
+        <div class="div-1489-head">
+          <img src="./img/Group 10696.png" alt="img-phone-1489" class="img-phone-1489">
+          <h1 class="h1-10696">Get In touch with Us</h1>
+        </div>
+        <p class="p-10696">Think with CronJ! Reach out to us today for futuristic solution development</p>
+        <p class="p-enter-details">Enter your details</p>
+        <div class="div-form-text-boxes">
+          <input type="text" name="" id="" class="form-textbox" placeholder="Enter Your Full Name">
+          <input type="text" name="" id="" class="form-textbox" placeholder="Enter your Phone Number">
+          <input type="text" name="" id="" class="form-textbox" placeholder="Enter Email ID">
+          <input type="text" name="" id="" class="form-textbox" placeholder="Enter Your Company Name">
+        </div>
+        <p class="p-enter-details">Requirements</p>
+        <div class="div-checkbox">
+          <div class="div-check-group">
+            <input type="checkbox" name="design" class="chk-primary" >
+            <label for="design" class="chk-label" id="design">Design</label>
+          </div>
+          <div class="div-check-group">
+            <input type="checkbox" name="web-app-dev" class="chk-primary" >
+            <label for="web-app-dev" class="chk-label" id="design">Web App Development</label>
+          </div>
+          <div class="div-check-group">
+            <input type="checkbox" name="Migration" class="chk-primary" >
+            <label for="Migration" class="chk-label" id="design">Migration</label>
+          </div>
+          <div class="div-check-group">
+            <input type="checkbox" name="mob-app-dev" class="chk-primary" >
+            <label for="mob-app-dev" class="chk-label" id="design">Mobile App Development</label>
+          </div>
+          <div class="div-check-group">
+            <input type="checkbox" name="hire-dev" class="chk-primary" >
+            <label for="hire-dev" class="chk-label" id="design">Hire a Developer</label>
+          </div>
+        </div>
+        <p class="p-enter-details">Enquiry Details</p>
+        <textarea name="enquiry-details" placeholder="Please enter your key description" class="ta-enq" id="" cols="40" rows="10"></textarea>
+        <div class="div-submit-btn">Submit Details</div>
       </section>
     </main>
+    <footer>
+      <section class="footer">
+        <h1 class="h1-footer-head">Entrepreneurs, Start Ups, and Enterprises across Continents trust CronJ!</h1>
+        <img src="./img/Group 12320.png" alt="" class="img-below-h1-footer-head">
+        <img src="./img/Group 12585.png" alt="" class="img-12585">
+      </section>
+    </footer>
   </div>
 </body>
 </html>
