--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="./css/widescreen.css">
+  <link rel="stylesheet" href="./css/mobile.css" media="screen and (max-width: 768px)">
+  <link rel="stylesheet" href="./css/widescreen.css" media="screen and (min-width: 1440px)">
   <title>CronJ-Fullstack</title>
 </head>
 <body>
