--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/footer.css">
   <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="./css/mobile-320px.css" media="screen and (min-width: 320px)">
+  <link rel="stylesheet" href="./css/mobile-320px.css" media="screen and (min-width: 320px) and (max-width: 414px)">
   <link rel="stylesheet" href="./css/mobile.css" media="screen and (max-width: 390px)">
   <link rel="stylesheet" href="./css/widescreen.css" media="screen and (min-width: 1440px)">
   <title>CronJ-Fullstack</title>
